--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.8.0",
     "react": "19.0.0",
     "react-native": "0.79.2"
   },
